@@ -1,3 +1,6 @@
+2017-02-12	SilverNexus
+	* result_list.c: Use non-strdup string duplication, as it is faster.
+
 2017-01-11  SilverNexus
 	* ErrorLog.c,
 	  ErrorLog.h,
